refactoring and add token for private room
