# src/models/room.go
@@ -1,18 +1,26 @@
 package models
 
+const (
+	TokenLenForRoom = 16
+)
+
+// swagger:model
 type Room struct {
-	ID        int    `json:"id"`
-	Name      string `json:"name"`
-	HostID    int    `json:"host_id"`
+	ID     int    `json:"id"`
+	Name   string `json:"name"`
+	HostID int    `json:"host_id"`
+	Public bool   `json:"public"`
+	Token  string `json:"token"`
+
 	UserCount int    `json:"user_count" bun:"-"`
-	Public    bool   `json:"public"`
 	Users     []User `bun:"m2m:users_rooms,join:User=Room"`
 }
 
 type UsersRooms struct {
-	ID     int   `bun:",pk"`
-	UserID int   `json:"user_id"`
-	User   *User `bun:"rel:belongs-to,join:user_id=id"`
-	RoomID int   `json:"room_id"`
-	Room   *Room `bun:"rel:belongs-to,join:room_id=id"`
+	ID     int `bun:",pk"`
+	UserID int `json:"user_id"`
+	RoomID int `json:"room_id"`
+
+	User *User `bun:"rel:belongs-to,join:user_id=id"`
+	Room *Room `bun:"rel:belongs-to,join:room_id=id"`
 }
